<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/bmi_table"
        android:layout_gravity="center"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:layout_marginTop="40px"
        android:textSize="30dp"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:textAlignment="center"
        android:hint="kg"
        android:layout_gravity="center_horizontal"
        android:id="@+id/weight"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textSize="30dp"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:textAlignment="center"
        android:hint="cm"
        android:layout_gravity="center_horizontal"
        android:id="@+id/height"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="30dp"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:textAlignment="center"
        android:hint="years"
        android:layout_gravity="center_horizontal"
        android:id="@+id/age"
        android:gravity="center_horizontal" />

    <Button
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:onClick="calculateBMI"
        android:text="Oblicz swoje BMI"
        android:textSize="33dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/result"
        android:textSize="28sp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/replay"
        android:textSize="15dp"
        android:layout_gravity="center"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/teal_200"
        android:color="@color/white" >
    </Button>

</LinearLayout>